feat: user favorite words
