# internal/presentation/http/service/assistant/routes.go
@@ -4,4 +4,5 @@ import "github.com/gin-gonic/gin"
 
 func RegisterRoutes(router *gin.RouterGroup, handler *Assistant) {
 	router.POST("/explainWord", handler.ExplainWord)
+	router.POST("/translate", handler.TranslateWord)
 }
