# internal/presentation/http/service/dictionary/routes.go
@@ -13,4 +13,9 @@ func RegisterRoutes(r *gin.RouterGroup, h *DictionaryHandler) {
 	r.GET("/getByWord/:word", h.GetByWord)
 	r.PATCH("/update", middleware.RequireRole("admin"), h.Update)
 	r.DELETE("/delete/:id", middleware.RequireRole("admin"), h.Delete)
+
+	r.POST("/favorite", h.AddToFavorite)
+	r.POST("/favorite/:id", h.AddToFavoriteWithID)
+	r.DELETE("/favorite/:id", h.DeleteFromFavorite)
+	r.GET("/favorite", h.GetFavorite)
 }
